--- a/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/configuration/BUILD
+++ b/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/configuration/BUILD
@@ -21,10 +21,13 @@ java_library(
         "//third_party:com_google_inject_guice",
         "//third_party:io_dropwizard_dropwizard_core",
         "//third_party:javax_inject_javax_inject",
+        "//third_party:lombok_libs",
         "//third_party:net_spy_spymemcached",
         "//third_party:org_apache_curator_curator_framework",
+        "//third_party:org_slf4j_slf4j_api",
         "//third_party:org_springframework_data_spring_data_commons",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/prometheus",
         "@tink_backend//src/libraries/tracing/jaeger",
+        "@tink_backend//src/libraries/unleash",
     ],
 )
