--- a/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/worker/BUILD
+++ b/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/worker/BUILD
@@ -36,5 +36,6 @@ junit_test(
         "@tink_backend//src/libraries/account_identifier",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/registry",
         "@tink_backend//src/libraries/provider",
+        "@tink_backend//src/libraries/unleash",
     ],
 )
