--- a/src/aggregation/service/BUILD
+++ b/src/aggregation/service/BUILD
@@ -34,6 +34,7 @@ java_library(
         "@aggregation//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
         "@aggregation//:com_google_guava_guava",
         "@aggregation//:com_netflix_governator_governator",
+        "@tink_backend//src/libraries/unleash",
     ],
 )
 
