--- a/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/context/BUILD
+++ b/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/context/BUILD
@@ -38,5 +38,6 @@ java_library(
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/core",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/registry",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/types/counters",
+        "@tink_backend//src/libraries/unleash",
     ],
 )
