--- a/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/worker/beneficiary/BUILD
+++ b/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/worker/beneficiary/BUILD
@@ -28,5 +28,6 @@ java_library(
         "@com_google_guava_guava",
         "@tink_backend//src/aggregation-controller/api/src/main/java/se/tink/backend/aggregationcontroller/v1/rpc/enums",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/registry",
+        "@tink_backend//src/libraries/unleash",
     ],
 )
