--- a/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/commands/BUILD
+++ b/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/commands/BUILD
@@ -86,6 +86,7 @@ junit_test(
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/types/counters",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/types/histograms",
         "@tink_backend//src/libraries/provider",
+        "@tink_backend//src/libraries/unleash",
         "@tink_backend//src/libraries/uuid",
     ],
 )
