--- a/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/operation/BUILD
+++ b/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/operation/BUILD
@@ -28,5 +28,6 @@ junit_test(
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/core",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/registry",
         "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/types/timers",
+        "@tink_backend//src/libraries/unleash",
     ],
 )
