--- a/.charts/tink-backend-aggregation-agents/templates/de/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/de/alerts.yaml
@@ -170,8 +170,24 @@ spec:
         summary: Bank errors rate is above 50% ( <{ $value }> ) for <{ $labels.className }>
           the last {{ .Values.p1WaitTimeBeforeFiringAlert }} minutes.
         tags: {{ .Values.tags }}
-        
-        
+
+    - alert: bank_is_down_de
+      expr: |
+        # bank is down since 60 mins
+        sum by(action, className) (increase(tink_agent_login_total{action=~"login|is-logged-in",market="DE",outcome=~"unavailable",provider_type!="test"}[60m]))
+      for: {{ .Values.p2WaitTimeBeforeFiringAlert }}
+      labels:
+        severity: urgent
+        priority: P2
+        who: integration-nazguls
+      annotations:
+        description: {{ .Values.kibanaClassLink }}
+          {{ .Values.grafanaLink }}
+        summary: Bank is down since 60 min for ( <{ $value }> ) login attempts for agent <{ $labels.className }>
+          the last {{ .Values.p2WaitTimeBeforeFiringAlert }} minutes.
+        tags: {{ .Values.tags }}
+
+
     ## Long term alerts 
     ## - to detect only authentication error / timeouts through longer period of time with really low SR
     - alert: long_term_all_error_between_80_and_90_de
