--- a/.charts/tink-backend-aggregation-agents/templates/payments/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/payments/alerts.yaml
@@ -17,7 +17,7 @@ spec:
       labels:
         severity: urgent
         priority: P3
-        who: payments
+        who: payments-connectivity
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
@@ -30,7 +30,7 @@ spec:
       expr: sum by (className, outcome) (increase(tink_agent_transfer_total{market="SE", className!~".*(nordea|seb|swedbank|handelsbanken).*", outcome="failed"}[30m])) >= 10
       labels:
         severity: urgent
-        who: payments
+        who: payments-connectivity
         priority: P4
       annotations:
         description: Check overall trend for this provider to assess the impact. https://grafana.global-production.tink.network/d/XvmDe8YMz/payments-overview-dashboard?orgId=1
@@ -41,7 +41,7 @@ spec:
             / sum by (className) (increase(tink_agent_transfer_total{market="SE", className=~".*(nordea|seb|swedbank|handelsbanken).*"}[1h]))) > 0.12 and sum by (className) (increase(tink_agent_transfer_total{market="SE", className=~".*(nordea|seb|swedbank|handelsbanken).*"}[1h])) > 100
       labels:
         severity: urgent
-        who: payments
+        who: payments-connectivity
         priority: P3
       annotations:
         description: Check overall trend for this provider to assess the impact. https://grafana.global-production.tink.network/d/XvmDe8YMz/payments-overview-dashboard?orgId=1
@@ -51,7 +51,7 @@ spec:
       expr: sum by (className, outcome) (increase(tink_agent_transfer_total{market="SE", className=~".*(SwedbankFallbackAgent).*", outcome="failed"}[1h])) >= 10
       labels:
         severity: urgent
-        who: payments
+        who: payments-connectivity
         priority: P3
       annotations:
         description: Check overall trend for this provider to assess the impact. https://grafana.global-production.tink.network/d/XvmDe8YMz/payments-overview-dashboard?orgId=1
@@ -61,7 +61,7 @@ spec:
       expr: sum by (className, outcome) (increase(tink_agent_transfer_total{market="SE", className!~".*(nordea|seb|swedbank|handelsbanken).*", outcome=~"unavailable"}[15m])) >= 15
       labels:
         severity: urgent
-        who: payments
+        who: payments-connectivity
         priority: P4
       annotations:
         description: This can indicate that the bank is having issues or that their api has changed. Check overall trend for this provider to assess the impact. https://grafana.global-production.tink.network/d/XvmDe8YMz/payments-overview-dashboard?orgId=1
@@ -71,7 +71,7 @@ spec:
       expr: sum by (className, outcome) (increase(tink_agent_transfer_total{market="SE", className=~".*(nordea|seb|swedbank|handelsbanken).*", outcome=~"unavailable"}[15m])) >= 15
       labels:
         severity: urgent
-        who: payments
+        who: payments-connectivity
         priority: P3
       annotations:
         description: This can indicate that the bank is having issues or that their api has changed. Check overall trend for this provider to assess the impact. https://grafana.global-production.tink.network/d/XvmDe8YMz/payments-overview-dashboard?orgId=1
@@ -81,7 +81,7 @@ spec:
       expr: sum(increase(tink_agent_transfer_total{market="SE", className="nxgen.se.openbanking.sebopenbanking.SebAgent", outcome="failed"}[24h])) / sum(increase(tink_agent_transfer_total{market="SE", className="nxgen.se.openbanking.sebopenbanking.SebAgent"}[24h])) > 0.5
       labels:
         severity: ping
-        who: payments
+        who: '#payments-connectivity-oncall'
       annotations:
         description: MONITORING SEB OB is failing transfers at a higher rate than expected, please investigate. 50% or more in the last 24h
         summary: MONITORING SEB OB is failing transfers at a higher rate than expected, please investigate. 50% or more in the last 24h
