feat(alerts): decrease failure allowed limit

--- a/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
@@ -50,11 +50,11 @@ spec:
     # Unknown errors (due to RuntimeException) alerts
     #-------------------------------------------------------------------------------------------------------------------
     # Authentication alerts
-    - alert: AuthenticationUnknownErrorRateOver10%PT
+    - alert: AuthenticationUnknownErrorRateOver5%PT
       expr: |
-        # Failed logins (due to unknown RuntimeException) over 10%
+        # Failed logins (due to unknown RuntimeException) over 5%
         (count(sum_over_time(tink_agent_login_total{action=~"login", outcome="failed", market="PT", provider_type!="test"}[30m])) by (action,className,provider)
-            / count(sum_over_time(tink_agent_login_total{action=~"login", market="PT", provider_type!="test"}[30m])) by (action,className,provider) > 0.1)
+            / count(sum_over_time(tink_agent_login_total{action=~"login", market="PT", provider_type!="test"}[30m])) by (action,className,provider) > 0.05)
       for: 5m
       labels:
         severity: urgent
@@ -63,16 +63,16 @@ spec:
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
-        summary: Authentication failures due to unknown RuntimeExceptions is over 10% (<{ $value }>%) for <{ $labels.className }> ( <{ $labels.provider }>
+        summary: Authentication failures due to unknown RuntimeExceptions is over 5% (<{ $value }>%) for <{ $labels.className }> ( <{ $labels.provider }>
           the last hour.
         tags: {{ .Values.tags }}
 
     # Refresh alerts
-    - alert: RefreshUnknownErrorRateOver10%PT
+    - alert: RefreshUnknownErrorRateOver5%PT
       expr: |
-        # Failed refreshes (due to unknown RuntimeException) over 10%
+        # Failed refreshes (due to unknown RuntimeException) over 5%
         (count(sum_over_time(tink_agent_refresh_total{label="refresh", outcome="failed", market="PT", provider_type!="test"}[30m])) by (className,provider,type)
-            / count(sum_over_time(tink_agent_refresh_total{market="PT", provider_type!="test"}[30m])) by (className,provider,type) > 0.1)
+            / count(sum_over_time(tink_agent_refresh_total{market="PT", provider_type!="test"}[30m])) by (className,provider,type) > 0.05
       for: 5m
       labels:
         severity: urgent
@@ -80,7 +80,7 @@ spec:
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
-        summary: Refresh failures due to unknown RuntimeExceptions is over 10% (<{ $value }>%) for <{ $labels.className }> ( <{ $labels.provider }>
+        summary: Refresh failures due to unknown RuntimeExceptions is over 5% (<{ $value }>%) for <{ $labels.className }> ( <{ $labels.provider }>
           the last 30 minutes for <{ $labels.type }>
         tags: {{ .Values.tags }}
 
