feat(es/santander): add tests for authenticator

--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/santander/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/santander/BUILD
@@ -2,7 +2,9 @@ load("//tools/bzl:junit.bzl", "junit_test")
 
 junit_test(
     name = "santander",
-    srcs = glob(["**/*.java"]),
+    srcs = [
+        "SantanderEsAgentTest.java",
+    ],
     data = [
         "//data:aggregation_test",
         "//data:provider_configurations",
@@ -23,5 +25,40 @@ junit_test(
         "//src/integration/credentials:service",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/configuration",
+    ],
+)
+
+junit_test(
+    name = "santander_unitTests",
+    srcs = [
+        "authenticator/SantanderEsAuthenticatorTest.java",
+    ],
+    data = [
+        "//:agent_test_data",
+        "//data:agent_unit_tests",
+        "//data:aggregation_test",
+        "//data:provider_configurations",
+        "//etc:development",
+        "//src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/santander/resources",
+    ],
+    tags = [
+        "external",
+        "manual",
+    ],
+    visibility = ["//visibility:public"],
+    runtime_deps = [
+        "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/redsys",
+    ],
+    deps = [
+        "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/santander",
+        "//src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/redsys",
+        "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
+        "//src/integration/credentials:service",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/response",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/storage",
+        "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
+        "//src/integration/lib/src/test/java/se/tink/backend/aggregation/configuration",
+        "//third_party:org_mockito_mockito_core",
     ],
 )
