chore(sonar): coverage exclusions II

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.java.libraries=bazel-bin/external/aggregation/v1/**/*.jar
 sonar.exclusions=**/*.js,**/*.ts,**/*.css,**/*.scss,**/ediclient/*.java
 sonar.tests=src
 sonar.test.inclusions=**/test/**
-sonar.coverage.exclusions=**/test/**
+sonar.coverage.exclusions=**/test/**/*.*
 sonar.cpd.java.minimumLines=5
 
 sonar.c.file.suffixes=-
