--- a/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
@@ -133,7 +133,8 @@ spec:
         count(sum_over_time(tink_agent_login_total{action="login",outcome="unavailable", market="PT"}[12h])) BY (className,provider)
         # All login attempts the last 6 hours
           / count(sum_over_time(tink_agent_login_total{action="login", market="PT"}[6h])) BY (className,provider) > 0.90
-      for: 1m
+      for: 15m
+      interval: 1h
       labels:
         severity: urgent
         priority: P1
@@ -167,7 +168,8 @@ spec:
         # Failed refresh (due to bank site errors) over 90%
         (count(sum_over_time(tink_agent_refresh_total{label="refresh", outcome="unavailable", market="PT", provider_type!="test"}[12h])) by (className,provider)
             / count(sum_over_time(tink_agent_refresh_total{market="PT", provider_type!="test"}[6h])) by (className,provider) > 0.90)
-      for: 1m
+      for: 15m
+      interval: 1h
       labels:
         severity: urgent
         who: integration-minions
@@ -207,7 +209,8 @@ spec:
         count(sum_over_time(tink_agent_login_total{action="login",outcome="cancelled_due_to_third_party_app_timeout", market="PT"}[6h])) BY (className,provider)
         # All login attempts the last 6 hours
           / count(sum_over_time(tink_agent_login_total{action="login", market="PT"}[6h])) BY (className,provider) > 0.90
-      for: 1m
+      for: 15m
+      interval: 1h
       labels:
         severity: urgent
         priority: P1
