test(nl/bunq): updated build and test.yaml file
[TC-4485]

--- a/etc/test.yml
+++ b/etc/test.yml
@@ -5119,7 +5119,8 @@ agentsServiceConfiguration:
         clientSecret: ''
         psd2ApiKey: ''
         psd2ClientAuthToken: ''
-        psd2InstallationKeyPair: ''
+        psd2InstallationPublicKey: ''
+        psd2InstallationPrivateKey: ''
         redirectUrl: https://127.0.0.1:7357/api/v1/credentials/third-party/callback
       tink:
         clientId: ''
