--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/nl/banks/openbanking/bunq/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/nl/banks/openbanking/bunq/BUILD
@@ -3,11 +3,7 @@ load("//tools/bzl:junit.bzl", "junit_test")
 junit_test(
     name = "bunq",
     srcs = glob(["**/*.java"]),
-    data = [
-        "//data:aggregation_test",
-        "//data:provider_configurations",
-        "//etc:development",
-    ],
+    data = ["//:agent_test_data"],
     tags = [
         "external",
         "manual",
