fix(bnppf): disable fetching checking accounts

--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/be/banks/fortis/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/be/banks/fortis/BUILD
@@ -6,6 +6,7 @@ java_library(
         "//src/aggregation/lib/src/main/java/se/tink/backend/aggregation/agents_platform/agents_framework",
         "//src/aggregation/lib/src/main/java/se/tink/backend/aggregation/client/provider_configuration/rpc",
         "//src/integration/amount",
+        "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/credentials:service",
         "//src/integration/lib",
         "//src/integration/lib:annotations",
