--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/cajamar/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/cajamar/BUILD
@@ -8,6 +8,7 @@ java_library(
         "//src/integration/amount",
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/credentials:service",
+        "//src/integration/identity_data",
         "//src/integration/lib",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/agentcapabilities",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions/bankservice",
@@ -29,6 +30,7 @@ java_library(
         "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_apache_httpcomponents_httpclient",
         "//third_party:org_apache_httpcomponents_httpcore",
+        "//third_party:org_apache_pdfbox_pdfbox",
         "//third_party:org_assertj_assertj_core",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
