refactor(DE/OB/GermanFields): refactor build method for reusable field
[NZG-304]

--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/supplementalfields/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/supplementalfields/BUILD
@@ -5,6 +5,7 @@ java_library(
     deps = [
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/lib:annotations",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/berlingroup",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/utils",
         "//src/libraries/i18n",
         "//src/libraries/serialization",
