refactor(SE/FI/Alandsbanken/RE): change constructors

--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/fi/banks/alandsbanken/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/fi/banks/alandsbanken/BUILD
@@ -19,6 +19,7 @@ java_library(
         "//src/libraries/i18n",
         "//src/libraries/serialization",
         "//src/libraries/strings",
+        "//third_party:com_google_inject_guice",
         "//third_party:com_sun_jersey_jersey_core",
         "//third_party:commons_codec_commons_codec",
         "//third_party:io_vavr",
