feat(es/ruralvia): add tests for loans
fixes, added the test for loans and change to TransactionDatePaginationController to manage the account transactions

--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/ruralvia/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/ruralvia/BUILD
@@ -6,6 +6,7 @@ junit_test(
         "fetcher/RuralviaUtilsTest.java",
         "fetcher/account/RuralviaTransactionalAccountFetcherTest.java",
         "fetcher/creditcard/RuralviaCreditCardFetcherTest.java",
+        "fetcher/loan/RuralviaLoanFetcherTest.java",
         "rpc/GlobalPositionResponseTest.java",
     ],
     data = [
