chore(provision): provision for Xero

--- a/.charts/tink-backend-aggregation/values/aggregation-production.yaml
+++ b/.charts/tink-backend-aggregation/values/aggregation-production.yaml
@@ -450,6 +450,8 @@ clients:
     aggregatorIdentifier: "Anyfin"
   fr-mitrust-production:
     aggregatorIdentifier: "Mi-Trust"
+  xero-production:
+    aggregatorIdentifier: "Xero"
 
 tppSecretsServiceConfiguration:
   certificatesLocation: "cluster"
