feat(alerts): PT & BE adjusting

--- a/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
@@ -243,5 +243,5 @@ spec:
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
-        summary: Authentication failures due to user cancelletion is over 90% (<{ $value }>) for <{ $labels.className }> ( <{ $labels.provider }> for last 12h
+        summary: Authentication failures due to user cancelletion is over 90% (<{ $value }>) for <{ $labels.className }> ( <{ $labels.provider }> for last 12h. Please check if a redirect url is correct.
         tags: {{ .Values.tags }}
