--- a/.charts/tink-backend-aggregation-agents/templates/be/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/be/alerts.yaml
@@ -232,7 +232,7 @@ spec:
         # All login attempts the last 6 hours
           / count(sum_over_time(tink_agent_login_total{action="login", market="BE"}[12h])) BY (className,provider) > 0.90
         # At least this many attempts.
-          and count(sum_over_time(tink_agent_login_total{action="login", market="BE", provider_type!="test"}[12h])) by (className,provider) > 1
+          and count(sum_over_time(tink_agent_login_total{action="login", market="BE", provider_type!="test"}[12h])) by (className,provider) > 2
       for: 15m
       interval: 1h
       labels:
@@ -242,5 +242,5 @@ spec:
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
-        summary: Authentication failures due to user cancelletion is over 90% (<{ $value }>) for <{ $labels.className }> ( <{ $labels.provider }> for last 12h
+        summary: Authentication failures due to user cancelletion is over 90% (<{ $value }>) for <{ $labels.className }> ( <{ $labels.provider }> for last 12h. Please check if a redirect url is correct.
         tags: {{ .Values.tags }}
